# AegisOS

./: .env.example  .gitignore  DASHBOARD_INTEGRATION.md  README.md  REAL_TIME_INTEGRATION.md  RUN_LIVE_AGENTS.md  SETUP_GUIDE.md  aegisos.spec  debug_providers.py  demo.py  launch_aegisos.py  pyproject.toml  setup_api_keys.py  start_proxy.py  test_all_agents.py  test_cerebras_agent.py  test_fresh.py  test_gemini_agent.py  test_groq_agent.py  test_imports.py  test_integration.py  test_proxy.py
aegisos/: __main__.py  config.py  main.py
aegisos/engine/: __init__.py  mock.py  proxy.py  proxy_integration.py  proxy_server.py  router.py
aegisos/llm/: __init__.py  analyzer.py  base.py  cerebras.py  gemini.py  groq.py
aegisos/screens/: __init__.py  agents.py  dashboard.py  help.py  keys.py  logs.py  models.py  models_config.py  sandbox.py  telemetry.py  threats.py
aegisos/store/: __init__.py  state.py
aegisos/widgets/: __init__.py  agent_status.py  header.py  log_viewer.py  metrics.py  nav.py  threat_card.py
examples/: agent_integration.py
