[project]
name = "aegisos"
version = "1.0.0"
description = "AI Agent Immune System — Terminal UI"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.61.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
proxy = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]
dev = [
    "pytest>=7.4.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
]

[project.scripts]
aegis = "aegisos.main:run"
aegis-proxy = "aegisos.engine.proxy_server:run_server"

[tool.hatch.build.targets.wheel]
packages = ["aegisos"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"